--- a/distribution/kubeflow.yaml
+++ b/distribution/kubeflow.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/sivaramsk/argoflow.git
-    targetRevision: "0.1.0"
+    targetRevision: "aa394ae"
     path: ./distribution
     kustomize:
       version: v4.0.5
